--- a/stylesheet/community.scss
+++ b/stylesheet/community.scss
@@ -386,9 +386,9 @@ main {
     }
 
     .answers {
-        padding: 10px;
+        // padding: 10px;
         background-color: $white-color;
-        margin: 15px 0;
+        // margin: 15px 0;
         border-radius: 5px;
         text-align: right;
 
@@ -397,10 +397,12 @@ main {
             color: $dark-color;
             margin-top: 10px;
             margin-bottom: 3px;
+            padding: 10px;
         }
 
         #date {
             font-size: 0.8em;
+            padding-right: 10px;
         }
     }
 }
