--- a/stylesheet/community.css
+++ b/stylesheet/community.css
@@ -416,7 +416,7 @@ body {
 }
 
 main {
-  background-color: #e4e4e4;
+  background-color: #6BFFC0;
   padding-bottom: 40px;
   min-height: 600px;
 }
