--- a/stylesheet/community.scss
+++ b/stylesheet/community.scss
@@ -351,7 +351,7 @@ body {
 }
 
 main {
-    background-color: $white-color-x;
+    background-color: $accent-color;
     // padding-top: 50px;
     padding-bottom: 40px;
     min-height: 600px;
