--- a/stylesheet/community.scss
+++ b/stylesheet/community.scss
@@ -280,7 +280,8 @@ body {
             width: 100%;
             height: 20%;
             background-color: $color-2;
-            text-align: center;
+            // text-align: center;
+            text-align: right;
             padding: 28px;
             // text-shadow: 0 0 1px $dark-color-xx;
 
@@ -836,15 +837,54 @@ footer {
             float: left;
             padding: 16px;
 
+            #login-item {
+                position: relative;
+                margin-left: 20px;
+                padding-bottom: 15px;
+                font-size: 0.9em;
+
+                &:hover {
+                    #detail-list-2 {
+                        visibility: visible;
+                        transition: 0.2s;
+                        top: 100%;
+                    }
+                }
+
+                #detail-list-2 {
+                    padding: 0;
+                    position: absolute;
+                    top: 150%;
+                    right:-50%;
+                    background-color: $weight-color;
+                    width: 200px;
+                    border-top: 5px solid $color-1;
+                    border-bottom: 5px solid $color-1;
+                    visibility: hidden;
+                    overflow: hidden;
+
+                    .nav-item {
+                        width: 100%;
+                        text-align: right;
+                        padding: 10px;
+                        &:hover {
+                            background-color: $white-color;
+                        }
+
+                        .nav-link {
+                            color: $dark-color-xx;
+                            position: relative;
+                            transition: 0.2s right;
+                        }    
+                    }
+                }
+            }
+
             a {
                 color: $dark-color-xx;
                 margin-left: 20px;
                 font-size: 0.9em;
                 transition: 0.1s;
-
-                &:first-child {
-                    color: $dark-color-xx;
-                }
 
                 &:hover {
                     text-decoration: none;
