--- a/stylesheet/signin.scss
+++ b/stylesheet/signin.scss
@@ -852,6 +852,7 @@ footer {
                             color: $dark-color-xx;
                             position: relative;
                             transition: 0.2s right;
+                            font-size: 1.1em;
                         }    
                     }
                 }
