--- a/stylesheet/community.scss
+++ b/stylesheet/community.scss
@@ -875,6 +875,7 @@ footer {
                             color: $dark-color-xx;
                             position: relative;
                             transition: 0.2s right;
+                            font-size: 1.1em;
                         }    
                     }
                 }
