--- a/stylesheet/index.scss
+++ b/stylesheet/index.scss
@@ -831,6 +831,7 @@ footer {
                             color: $dark-color-xx;
                             position: relative;
                             transition: 0.2s right;
+                            font-size: 1.1em;
                         }    
                     }
                 }
