--- a/stylesheet/tune.scss
+++ b/stylesheet/tune.scss
@@ -406,7 +406,7 @@ main {
     background-color: $accent-color;
     // padding-top: 50px;
     padding-bottom: 40px;
-    min-height: 600px;
+    // min-height: 400px;
 
     #tune-container {
         #step-two {
