--- a/stylesheet/clerk-page.css
+++ b/stylesheet/clerk-page.css
@@ -418,20 +418,18 @@ body {
 
 main {
   margin-top: 80px;
-  position: fixed;
-  right: 0%;
   width: 100%;
   height: 100%;
   padding: 20px;
-  margin-top: 100px;
+  margin-top: 82px;
   z-index: 150;
   overflow: auto;
 }
 
-main #list-of-patients {
-  -webkit-box-shadow: 0 0 5px #e4e4e4;
-          box-shadow: 0 0 5px #e4e4e4;
-  border-radius: 3px;
+main #list-of-patients, main #list-of-comments {
+  -webkit-box-shadow: 0 0 5px #868686;
+          box-shadow: 0 0 5px #868686;
+  border-radius: 4px;
   overflow: hidden;
   background-color: #ffffff;
 }
@@ -491,6 +489,7 @@ main #list-of-patients {
     position: fixed;
     top: 0;
     height: 10%;
+    z-index: 400;
   }
   #desktop-header #navbar {
     position: relative;
@@ -577,6 +576,7 @@ main #list-of-patients {
     margin-left: 12px;
   }
   main {
+    position: relative;
     right: 20%;
     width: 80%;
   }
