--- a/stylesheet/clerk-page.scss
+++ b/stylesheet/clerk-page.scss
@@ -382,19 +382,19 @@ body {
 
 main {
     margin-top: 80px;
-    position: fixed;
+    // position: fixed;
     // top: 11%;
-    right: 0%;
+    // right: 0%;
     width: 100%;
     height: 100%;
     padding: 20px;
-    margin-top: 100px;
+    margin-top: 82px;
     z-index: 150;
     overflow: auto;
 
-    #list-of-patients {
-        box-shadow: 0 0 5px $white-color-x;
-        border-radius: 3px;
+    #list-of-patients, #list-of-comments {
+        box-shadow: 0 0 5px $dark-color-xx;
+        border-radius: 4px;
         overflow: hidden;
         background-color: $white-color;
     }
@@ -494,6 +494,7 @@ main {
         position: fixed;
         top: 0;
         height: 10%;
+        z-index: 400;
 
 
         #navbar {
@@ -604,6 +605,7 @@ main {
     }
 
     main {
+        position: relative;
         right: 20%;
         width: 80%;
     }
